@@ -6,5 +6,10 @@ systems that do not have group quota support, and thus depend on manual
 enforcement to ensure that servers do not use more than their allowed disk
 space. <p>
 
+It is also handy even on systems with group quotas, as the <b>Send warning when usage reaches</b> field can be used to enter a list of percentage thresholds
+at which warning email will be sent when they are passed. This allows the
+system administrator to catch excessive or rapidly growing disk usage early.
+<p>
+
 <footer>
 
