@@ -1,5 +1,5 @@
-html=New script installers
-desc=Added a script insaller for poMMo, a new web-based mailing list manager. Also updated the phpPgAdmin script installer to version 4.2, phpCOIN to 1.4.1, TikiWiki to 1.9.11, bbPress to 0.9.0.1, Coppermine to 1.4.18, Joomla to 1.5.2, OpenX to 2.4.5, and SugarCRM to 5.0.0c.
+desc=New script installers
+html=Added a script insaller for poMMo, a new web-based mailing list manager. Also updated the phpPgAdmin script installer to version 4.2, phpCOIN to 1.4.1, TikiWiki to 1.9.11, bbPress to 0.9.0.1, Coppermine to 1.4.18, Joomla to 1.5.2, OpenX to 2.4.5, and SugarCRM to 5.0.0c.
 master=1
 reseller=1
 domain=1
